# service/api/api-handler.go
@@ -22,6 +22,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/conversations/:conversationId/messages/:messageId", rt.requireAuth(rt.deleteMessage))
 	rt.router.PUT("/conversations/:conversationId/read", rt.requireAuth(rt.markAsRead))
 	rt.router.PUT("/conversations/:conversationId/messages/:messageId/reaction", rt.requireAuth(rt.reactToMessage))
+	rt.router.POST("/conversations/:conversationId/messages/forward", rt.wrap(rt.forwardMessage))
 	rt.router.ServeFiles("/images/*filepath", http.Dir("./images"))
 
 	// 3. Gestione Gruppi
@@ -36,6 +37,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users", rt.requireAuth(rt.searchUsers))
 	rt.router.PUT("/users/:userId/photo", rt.requireAuth(rt.setMyPhoto))
 	rt.router.GET("/users/:userId", rt.requireAuth(rt.getUserById))
+	rt.router.PUT("/users/:userId/username", rt.wrap(rt.setUsername))
 
 	// Quando arriva una richiesta tipo "/avatars/1.jpg", chiama la funzione getAvatar
 	rt.router.GET("/avatars/:filename", rt.wrap(rt.getAvatar))
